# mpk

./: README.md  pyproject.toml
mpk/: __init__.py  mpk_cnn_factory.py
mpk/flax/: __init__.py  mpk_cnn.py
test/flax_mpk/: test_mpk_cnn.py
